# ecommerce-sales-analysis

./: .gitignore  README.md  dashboard.py  pyproject.toml  testes.ipynb
