[project]
name = "ecommerce-sales-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "matheussousa",email = "matheussousasuport@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (<3.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "streamlit (<2.0.0)",
    "plotly (>=6.6.0,<7.0.0)"
]

[tool.poetry]
packages = [{include = "ecommerce_sales_analysis", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
